# dumb-game

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  README.textures  configure.in  wadinfo
genppm/: Makefile.am
lvl/: E1M1.wad  Makefile.am
palette/: Makefile.am
pt/: Makefile.am  creatures.pt  decoration.pt  game.pt  generic.pt  levels.pt  linetypes.pt  missiles.pt  weapons.pt
sprite/: Makefile.am  fbala0.ppm  fbalb0.ppm  fbalc0.ppm  fbald0.ppm  fbale0.ppm  fbalf0.ppm  fbalg0.ppm  newsa0.ppm
texture/: Makefile.am  brikflor.ppm  fplnk.ppm  gargoyle.ppm  ice.ppm  lbrkflor.ppm  lilbrick.ppm  lplnk.ppm  pnames  rockflor.ppm  rufbrick.ppm  stonwalb.ppm  stonwals.ppm  tiles1.ppm  whmarb.ppm  woodflo2.ppm  woodflor.ppm
